8286177: C2: "failed: non-reduction loop contains reduction nodes" assert failure

Reviewed-by: mdoerr, phh, clanger
Backport-of: caceaba5594606023ea4eb8d99698243be5b76b8